Fixed broken layout

--- a/src/Footer.css
+++ b/src/Footer.css
@@ -38,7 +38,7 @@
 
 .footer-link{
     display:inline-block;
-    margin: 1.0rem;
+    margin: 1.0rem 2.0rem;
 }
 
 .footer-link a{
