--- a/src/Home.css
+++ b/src/Home.css
@@ -20,6 +20,7 @@
 .Home{
     background-color: #2f2f2f;
     color: white;
+    overflow-x: hidden;
 }
 
 
