--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
 html{
     scroll-behavior: smooth;
-    width: 100%;
-    overflow-x: hidden;
 }
 
 body {
